Fixed spacing for added user name radio buttons

--- a/main.css
+++ b/main.css
@@ -18,6 +18,10 @@ p {
   text-align: center;
 }
 
+h1 {
+  text-align: center;
+}
+
 
 /****************************
 NAV Bar Styling
@@ -34,12 +38,17 @@ NAV Bar Styling
 #messageBar {
   height: 5vh;
   padding: 0 1vh;
-  width:90%;
-  margin-left:10%;
+  margin: 0 5rem;
+  width:100%;
+  /*margin-left:10%;*/
+}
+
+.nav-bar-spacing {
+  margin-right: 1.5rem;
 }
 
 #deleteMssgsBtn {
-  width: 25%;
+  width: 15%;
   border-radius: 5%;
 }
 
@@ -48,8 +57,8 @@ NAV Bar Styling
   flex-direction: column;
 }
 
-.inputMessage {
-  width: 35%;
+#inputMessage {
+  width: 30%;
 }
 
 .chatty-logo {
